--- a/css/appStyles.css
+++ b/css/appStyles.css
@@ -21,8 +21,14 @@ textarea {
     background-image: url("background.jpg");
 }
 
+.hidden {
+    display: none;
+}
+
 .navbar{
     background-image: url("background.jpg");
+    margin-bottom: 0px;
+
 }
 
 .msg {
@@ -36,18 +42,18 @@ textarea {
 
 .msg-from {
     float: left;
-    background-color: #868e96;
+    background-color: #a3abb3;
 }
 
 .msg-to {
     float: right;
-    background-color: #afd9ee;
+    background-color: #c8c8ff;
 }
 
-.navbar {
-    background-color: #68bdff;
-    margin-bottom: 0px;
+.pull-right {
+    float: right;
 }
+
 
 #main-bg {
     height: 92.5%;
@@ -64,14 +70,14 @@ textarea {
 }
 #col-left {
     /*border-top: #17a2b8 1px solid;*/
-    background-color: #e5f8ff;
+    background-color: #eceaee;
     overflow: scroll;
 }
 
 #col-right {
     border-left: #000000 1px solid;
     /*border-top: #17a2b8 1px solid;*/
-    background-color: #f2f8ff;
+    background-color: #e1e1e6;
 }
 
 button{
@@ -84,6 +90,7 @@ button{
     /*margin-bottom: 10px;
     border-bottom: #000000 1px solid;*/
     font-family: "Trebuchet MS", Helvetica, sans-serif;
+    background-color: #bcbcbc;
 }
 
 .header-text {
