added comments added refresh button

--- a/views/main.html
+++ b/views/main.html
@@ -27,7 +27,10 @@
 <div id="main-bg">
     <div class="row">
         <div class="col col-sm-4" id="col-left">
-            <div class="col-header text-center align-items-center">
+            <div class="col-header align-items-center text-center">
+                <button type="button" class="btn btn-primary pull-left" ng-click="getMessagesFromServer()">
+                    <i class="fa fa-undo"></i>
+                </button>
                 <span class="h5 header-text">Conversations</span>
                 <button type="button" class="btn btn-primary pull-right" data-toggle="modal" data-target="#myModal">
                     <i class="fa fa-plus" aria-hidden="true"></i>
