--- a/views/landing_page.html
+++ b/views/landing_page.html
@@ -12,7 +12,7 @@
                 <label for="nick">Your unique nick</label>
 
                 <div class="container">
-                    <input type="text"  class="form-control w-75 center-block" id="nick" placeholder="Enter your nick here" ng-model="username">
+                    <input type="text"  class="form-control w-75 center-block" id="nick" placeholder="Enter your nick here" ng-model="userName">
                 </div>
 
                 <small id="emailHelp" class="form-text text-muted">
