implemented Prototype design pattern

--- a/views/landing_page.html
+++ b/views/landing_page.html
@@ -2,7 +2,7 @@
     <div class="container container-full-bg" id="jumbotron-container">
         <h1 class="display-1">{{appTitle}}</h1>
         <p class="lead">
-            This is a landing page to an application no one will ever use
+           Chat applicationn based on a piggyback mechanism
         </p>
         <br>
         <hr class="my-4">
